--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,7 @@
 
 body{ background-color: aqua;}
-p{color: aquamarine;}
-
+p{color: aquamarine;} 
 
 
 .reciclegem{font-style: italic;}
+header {font-size: 30px; margin: 10px;            padding-bottom: 20px;     }
